enhance: `delegatedadminsitration`: update response fields
