# delegatedadministration/model_create_delegate_response.go
@@ -13,6 +13,8 @@ package delegatedadministration
 
 import (
 	"encoding/json"
+	"bytes"
+	"fmt"
 )
 
 // checks if the CreateDelegateResponse type satisfies the MappedNullable interface at compile time
@@ -20,17 +22,21 @@ var _ MappedNullable = &CreateDelegateResponse{}
 
 // CreateDelegateResponse struct for CreateDelegateResponse
 type CreateDelegateResponse struct {
-	Msg *string `json:"msg,omitempty"`
+	Msg string `json:"msg"`
 	Delegatekey *string `json:"delegatekey,omitempty"`
-	ErrorCode *string `json:"errorCode,omitempty"`
+	ErrorCode string `json:"errorCode"`
 }
+
+type _CreateDelegateResponse CreateDelegateResponse
 
 // NewCreateDelegateResponse instantiates a new CreateDelegateResponse object
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewCreateDelegateResponse() *CreateDelegateResponse {
+func NewCreateDelegateResponse(msg string, errorCode string) *CreateDelegateResponse {
 	this := CreateDelegateResponse{}
+	this.Msg = msg
+	this.ErrorCode = errorCode
 	return &this
 }
 
@@ -42,36 +48,28 @@ func NewCreateDelegateResponseWithDefaults() *CreateDelegateResponse {
 	return &this
 }
 
-// GetMsg returns the Msg field value if set, zero value otherwise.
+// GetMsg returns the Msg field value
 func (o *CreateDelegateResponse) GetMsg() string {
-	if o == nil || IsNil(o.Msg) {
+	if o == nil {
 		var ret string
 		return ret
 	}
-	return *o.Msg
+
+	return o.Msg
 }
 
-// GetMsgOk returns a tuple with the Msg field value if set, nil otherwise
+// GetMsgOk returns a tuple with the Msg field value
 // and a boolean to check if the value has been set.
 func (o *CreateDelegateResponse) GetMsgOk() (*string, bool) {
-	if o == nil || IsNil(o.Msg) {
+	if o == nil {
 		return nil, false
 	}
-	return o.Msg, true
+	return &o.Msg, true
 }
 
-// HasMsg returns a boolean if a field has been set.
-func (o *CreateDelegateResponse) HasMsg() bool {
-	if o != nil && !IsNil(o.Msg) {
-		return true
-	}
-
-	return false
-}
-
-// SetMsg gets a reference to the given string and assigns it to the Msg field.
+// SetMsg sets field value
 func (o *CreateDelegateResponse) SetMsg(v string) {
-	o.Msg = &v
+	o.Msg = v
 }
 
 // GetDelegatekey returns the Delegatekey field value if set, zero value otherwise.
@@ -106,36 +104,28 @@ func (o *CreateDelegateResponse) SetDelegatekey(v string) {
 	o.Delegatekey = &v
 }
 
-// GetErrorCode returns the ErrorCode field value if set, zero value otherwise.
+// GetErrorCode returns the ErrorCode field value
 func (o *CreateDelegateResponse) GetErrorCode() string {
-	if o == nil || IsNil(o.ErrorCode) {
+	if o == nil {
 		var ret string
 		return ret
 	}
-	return *o.ErrorCode
+
+	return o.ErrorCode
 }
 
-// GetErrorCodeOk returns a tuple with the ErrorCode field value if set, nil otherwise
+// GetErrorCodeOk returns a tuple with the ErrorCode field value
 // and a boolean to check if the value has been set.
 func (o *CreateDelegateResponse) GetErrorCodeOk() (*string, bool) {
-	if o == nil || IsNil(o.ErrorCode) {
+	if o == nil {
 		return nil, false
 	}
-	return o.ErrorCode, true
+	return &o.ErrorCode, true
 }
 
-// HasErrorCode returns a boolean if a field has been set.
-func (o *CreateDelegateResponse) HasErrorCode() bool {
-	if o != nil && !IsNil(o.ErrorCode) {
-		return true
-	}
-
-	return false
-}
-
-// SetErrorCode gets a reference to the given string and assigns it to the ErrorCode field.
+// SetErrorCode sets field value
 func (o *CreateDelegateResponse) SetErrorCode(v string) {
-	o.ErrorCode = &v
+	o.ErrorCode = v
 }
 
 func (o CreateDelegateResponse) MarshalJSON() ([]byte, error) {
@@ -148,16 +138,50 @@ func (o CreateDelegateResponse) MarshalJSON() ([]byte, error) {
 
 func (o CreateDelegateResponse) ToMap() (map[string]interface{}, error) {
 	toSerialize := map[string]interface{}{}
-	if !IsNil(o.Msg) {
-		toSerialize["msg"] = o.Msg
-	}
+	toSerialize["msg"] = o.Msg
 	if !IsNil(o.Delegatekey) {
 		toSerialize["delegatekey"] = o.Delegatekey
 	}
-	if !IsNil(o.ErrorCode) {
-		toSerialize["errorCode"] = o.ErrorCode
-	}
+	toSerialize["errorCode"] = o.ErrorCode
 	return toSerialize, nil
+}
+
+func (o *CreateDelegateResponse) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"msg",
+		"errorCode",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varCreateDelegateResponse := _CreateDelegateResponse{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varCreateDelegateResponse)
+
+	if err != nil {
+		return err
+	}
+
+	*o = CreateDelegateResponse(varCreateDelegateResponse)
+
+	return err
 }
 
 type NullableCreateDelegateResponse struct {
